Fixed overflowing category names

--- a/site/public/css/bootstrap.css
+++ b/site/public/css/bootstrap.css
@@ -523,10 +523,11 @@ input[type="button"].btn-block {
   padding: .2em .6em .3em;
   font-size: 65%;
   font-weight: bold;
-  line-height: 2.5;
+  /*line-height: 2.5;*/
   color: #fff;
   text-align: center;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
+  word-wrap: break-word;
   vertical-align: baseline;
   border-radius: .25em;
 }
